--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ backports.zoneinfo==0.2.1
 boto==2.49.0
 boto3==1.24.4
 botocore==1.27.4
+dj-database-url==0.5.0
 Django==4.0.2
 django-cors-headers==3.11.0
 django-storages==1.11.1
@@ -17,6 +18,7 @@ mypy-extensions==0.4.3
 pgzero==1.2.1
 Pillow==9.1.0
 psycopg2==2.9.1
+pygame==2.0.0
 PyJWT==2.4.0
 python-dateutil==2.8.2
 pytz==2022.1
